---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 01. 07. 2019
  Changes:
    - Early construction robots can now be deployed via non-personal roboports.
    - Reimplemented the destruction logic to maximize mod compatibility, and simplified the code a lot.
---------------------------------------------------------------------------------------------------
Version: 0.5.5
Date: 17. 06. 2019
  Bugfixes:
    - Fixed crash introduced in last patch. Thanks schmorp for reporting!
---------------------------------------------------------------------------------------------------
Version: 0.5.4
Date: 05. 06. 2019
  Bugfixes:
    - Fixed that non-minable entity marked for deconstruction could result in an infinite stream of robots self-destructing. Thanks Nirahiel for reporting!
---------------------------------------------------------------------------------------------------
Version: 0.5.3
Date: 01. 06. 2019
  Bugfixes:
    - Fixed that you could sometimes lose some repair packs when a single robot both repaired and built/destroyed an entity. Thanks Nirahiel for reporting!
---------------------------------------------------------------------------------------------------
Version: 0.5.2
Date: 13. 05. 2019
  Bugfixes:
    - Fixed crash if the player died while the robots were out. Thanks Arcitos for reporting!
---------------------------------------------------------------------------------------------------
Version: 0.5.1
Date: 10. 05. 2019
  Bugfixes:
    - Upgrade planner will now return items. Thanks Nirahiel for reporting!
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 08. 05. 2019
  Features:
    - Destroyed entities will now leave behind a ghost after the first research (can be disabled in settings). Thanks Vandhal for the suggestion!